# Industrial_IoT_Data-AI_Platform

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  requirements.txt
.github/: copilot-instructions.md
.github/skills/feature-store-feast/: SKILL.md
.github/skills/iot-telemetry-generator/: SKILL.md
.github/skills/lakehouse-medallion/: SKILL.md
.github/skills/mlops-pipeline/: SKILL.md
.github/skills/model-serving-fastapi/: SKILL.md
.github/skills/platform-monitoring/: SKILL.md
.github/skills/streaming-pipeline/: SKILL.md
.github/workflows/: ci.yml
data-generator/: README.md  pyproject.toml
data-generator/data_generator/: __init__.py  config.py  failure.py  fleet.py  machine.py  main.py  schema.py
data-generator/data_generator/sinks/: __init__.py  base.py  file_sink.py  kafka_sink.py  stdout_sink.py
data-generator/tests/: __init__.py  test_generator.py
docs/: DATA_MODELING.md  IMPLEMENTATION_PLAN.md  RUNBOOK.md  SOURCE_ANALYSIS.md  TEST_CASES.md
docs/architecture/: architecture.md
feature-engineering/: README.md  pyproject.toml
feature-engineering/feast/: data_sources.py  entities.py  feature_repo.py  feature_store.yaml  features.py
feature-engineering/feature_engineering/: __init__.py  build_offline_store.py  check_parity.py  config.py  export_gold_snapshot.py  feast_repo.py  historical_features.py  materialize.py  transforms.py
feature-engineering/tests/: test_historical_features.py  test_offline_store.py  test_transforms.py
infra/: README.md
infra/docker/airflow/: Dockerfile  requirements.txt
infra/docker/mlflow/: Dockerfile
infra/docker/postgres/: init.sql
infra/docker/spark/: Dockerfile
lakehouse/: README.md  __init__.py  config.py  dq.py  pyproject.toml  verify_lakehouse.py
lakehouse/gold/: __init__.py  build_gold.py  submit_gold.sh
lakehouse/query/: __init__.py  duckdb_smoke.py
lakehouse/silver/: __init__.py  build_silver.py  submit_silver.sh
lakehouse/tests/: test_dq_rules.py  test_field_parity.py
ml/: README.md  __init__.py  config.py  pipeline.py  pyproject.toml  train_raw_telemetry_model.py
ml/anomaly_detection/: __init__.py  train.py
ml/battery_health/: __init__.py  train.py
ml/common/: __init__.py  data.py  metrics.py  registry.py  splits.py  synthetic.py  tasks.py  tracking.py
ml/inference/: __init__.py  batch.py
ml/predictive_maintenance/: __init__.py  train.py
ml/tests/: test_metrics.py  test_pipeline.py  test_registry.py  test_splits.py  test_training.py
monitoring/: README.md  __init__.py  config.py  pyproject.toml
monitoring/analytics/: __init__.py  export_bi.py  transforms.py
monitoring/drift/: __init__.py  evidently_reports.py  metrics.py
monitoring/grafana/dashboards/: fleet_operations.json  ml_metrics.json  ml_predictions.json  platform_health.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: datasource.yml
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/rules/: alerts.yml
monitoring/tests/: test_analytics.py  test_drift.py
notebooks/: README.md
orchestration/: README.md
orchestration/dags/: bi_export.py  drift_report.py  train_models.py
serving/: Dockerfile  README.md  pyproject.toml
serving/app/: __init__.py  config.py  main.py  metrics.py  models.py  schemas.py
serving/tests/: test_serving.py
streaming/: README.md  __init__.py  config.py  fields.py  pyproject.toml
streaming/producers/: __init__.py  create_topic.py
streaming/spark/: __init__.py  anomaly_alerts.py  ingest_bronze.py  schema.py  submit_alerts.sh  submit_ingest.sh  submit_verify.sh  verify_bronze.py
streaming/tests/: __init__.py  test_anomaly_alerts.py  test_field_parity.py
