[project]
name = "feature-engineering"
version = "0.1.0"
description = "Time-series feature engineering and Feast feature store (Phase 5)."
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0",
    "feast>=0.40",
    "pandas>=2.2",
    "pyarrow>=16.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.5"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["feature_engineering*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", ".."]

[tool.ruff]
line-length = 100