[project]
name = "iiot-ml"
version = "0.1.0"
description = "ML model building & MLOps — predictive maintenance, anomaly detection, battery health (Phases 6-7)."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=16.1",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "mlflow>=2.14",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.5"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ml*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# repo root for `ml.*`; parent for cross-package imports.
pythonpath = [".", ".."]

[tool.ruff]
line-length = 100
