[project]
name = "iiot-serving"
version = "0.1.0"
description = "FastAPI model inference service — predictive maintenance, anomaly, battery health (Phase 9)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "prometheus-client>=0.20",
    "pandas>=2.2",
    "mlflow>=2.14",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "httpx>=0.27", "ruff>=0.5"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# repo root for `app.*`; parent for the cross-package `ml.*` imports.
pythonpath = [".", ".."]

[tool.ruff]
line-length = 100
